# zrive-ds

./: .gitignore  pyproject.toml
src/zrive/: __init__.py  eda_findings.md  module1.py
src/zrive/module1/eda_findings_files/: eda_findings.ipynb
src/zrive/module2/used_notebooks/: eda.ipynb  eda2.ipynb
src/zrive/module3/: data.py  inference.py  model_exploration.ipynb  model_exploration.md
src/zrive/module3/models/: logistic_regression_241a5eb9568e540772f3a642386aa1b74d4caf9a.pkl
src/zrive/module4/: data_processing.py  inference.py  model_analysis.ipynb  model_analysis.md  nonlinear_models_exploration.ipynb  nonlinear_models_exploration.md  train.py
src/zrive/module5/: module5.ipynb  module5.md
src/zrive/module6/src/: app.py  exceptions.py
src/zrive/module6/src/basket_model/: basket_model.py  feature_store.py
src/zrive/module6/src/basket_model/utils/: features.py  loaders.py
src/zrive/module6/tests/: test_app.py
tests/: test_module1.py
