[project]
name = "zrive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "matplotlib>=3.10.6",
    "mypy>=1.18.2",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250926",
    "pytest>=8.4.2",
    "requests>=2.32.5",
]

[project.scripts]
zrive = "zrive:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20250913",
]
